# benchmark_and_scoring_mocap

./: CMakeLists.txt  README.md  package.xml
config/: AIRLab_mocap.yaml  all_home_mocap.yaml  all_work_mocap.yaml  erl_work_2017 (copy).pgm  erl_work_2017.yaml  erl_work_polimi.pgm  erl_work_polimi.yaml  fbm1h_mocap.yaml  fbm2h_map.yaml  fbm2h_mocap.yaml  fbm3w_mocap.yaml  leipzig_robocup_work_testbed_map.yaml  leipzig_robocup_work_testbed_realmap.yaml  lisbon_work_testbed_map.yaml  robocup_mocap.yaml  tbmh_mocap.yaml  tbmw_map.yaml  tbmw_mocap.yaml
config/old_maps_and_configs/: fbm1_map.yaml  fbm1w_mocap.yaml  fbm2h_mocap.yaml  fbm3w_map.pgm  fbm3w_mocap.yaml  peccioli_map.yaml  tbmh_map.yaml  tbmh_mocap.yaml  tbmw_map.yaml
launch/: erl_work_2017.launch  erl_work_polimi.launch  everything_log_mocap.launch  fbm1_log_mocap.launch  fbm1w_log_mocap.launch  fbm2h_log_mocap.launch  fbm3w_log_mocap.launch  home_log_mocap.launch  tbmh_log_mocap.launch  tbmw_log_mocap.launch  work_log_mocap.launch  work_test.launch
launch/old_launches/: fbm1h_log_mocap.launch  fbm2h_log_mocap.launch  fbm3w_log_mocap.launch  tbmh_log_mocap.launch
rviz/: fbm1.rviz  fbm3w.rviz  tbmh.rviz  tbmw.rviz
test_logs/: log_fbm2h_mocap_2015-10-23-16-15-40_0.bag  log_fbm2h_mocap_2015-10-23-16-15-40_0_reached_waypoint_timing.yaml  log_fbm3w_mocap_2015-11-03-17-39-42_0.bag
tools/: Untitled Document 1  erl_waypoints.csv  erl_waypoints_brsu.csv  erl_waypoints_polimi.csv  navigation_goals_as_marker.py
tools/NavigationBenchmarkScoringTool/: bag_to_csv.py  environment.yml  evaluation.ipynb
