<?xml version="1.0"?>
<package>
  <name>rockin_mocap</name>
  <version>0.1.0</version>
  <description>The rockin_mocap package</description>
  <maintainer email="martino.migliavacca@polimi.it">Martino Migliavacca</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>mocap_optitrack</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
</package>
